--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "1.0.0",
 	"dependencies": {
 		"discord-interactions": "^2.0.2",
-		"raw-body": "^2.4.1"
+		"raw-body": "^2.4.1",
+		"axios": "^1.5.0",
+		"yfinance": "^0.2.22"
 	}
 }
