--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
 		"discord-interactions": "^2.0.2",
 		"raw-body": "^2.4.1",
 		"axios": "^1.5.0",
-		"yfinance": "^0.2.22"
+		"yahoo-finance2": "^2.4.4"
 	}
 }
