--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"discord-interactions": "^2.0.2",
 		"raw-body": "^2.4.1",
 		"axios": "^1.5.0",
-		"yahoo-finance2": "^2.4.4"
+		"yahoo-finance2": "^2.4.4",
+		"node-fetch": "^3.3.1"
 	}
 }
