--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"dependencies": {
 		"discord-interactions": "^2.0.2",
 		"raw-body": "^2.4.1",
-		"axios": "^1.5.0",
-		"yahoo-finance2": "^2.4.4"
-	}
+                "axios": "^1.5.0",
+                "yahoo-finance2": "^2.4.4",
+                "node-cron": "^3.0.2"
+        }
 }
