--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,11 @@ STATE_FILE=
 # Optional: automatically set on Vercel
 VERCEL=
 
+# Vercel Edge Config connection
+EDGE_CONFIG=
+EDGE_CONFIG_ID=
+EDGE_CONFIG_TOKEN=
+
+# Vercel Blob token
+BLOB_READ_WRITE_TOKEN=
+
