--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-	"name": "my-bot",
-	"version": "1.0.0",
-	"dependencies": {
-		"discord-interactions": "^2.0.2",
-		"raw-body": "^2.4.1",
-                "axios": "^1.5.0",
-                "yahoo-finance2": "^2.4.4"
-        }
+  "name": "my-bot",
+  "version": "1.0.0",
+  "dependencies": {
+    "discord-interactions": "^2.0.2",
+    "raw-body": "^2.4.1",
+    "axios": "^1.5.0",
+    "yahoo-finance2": "^2.4.4",
+    "@vercel/edge-config": "^1.4.0",
+    "@vercel/blob": "^1.1.1"
+  }
 }
