Improve Vercel storage setup

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ VERCEL=
 
 # Vercel Edge Config connection
 EDGE_CONFIG=
+# Optional overrides if connection string lacks values
 EDGE_CONFIG_ID=
 EDGE_CONFIG_TOKEN=
 
