--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,9 @@ EDGE_CONFIG=
 EDGE_CONFIG_ID=
 EDGE_CONFIG_TOKEN=
 
+# Alternatively, you can leave EDGE_CONFIG_ID and EDGE_CONFIG_TOKEN blank
+# if they are included in EDGE_CONFIG (e.g. https://edge-config.vercel.com/ecfg_XXX?token=YYY)
+
 # Vercel Blob token
 BLOB_READ_WRITE_TOKEN=
 
