Replace Edge Config and Blob with Vercel KV

--- a/.env.example
+++ b/.env.example
@@ -21,14 +21,7 @@ STATE_FILE=
 # Optional: automatically set on Vercel
 VERCEL=
 
-# Vercel Edge Config connection
-EDGE_CONFIG=
-EDGE_CONFIG_ID=
-EDGE_CONFIG_TOKEN=
-
-# Alternatively, you can leave EDGE_CONFIG_ID and EDGE_CONFIG_TOKEN blank
-# if they are included in EDGE_CONFIG (e.g. https://edge-config.vercel.com/ecfg_XXX?token=YYY)
-
-# Vercel Blob token
-BLOB_READ_WRITE_TOKEN=
+# Vercel KV connection
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
 
